--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,15 @@ services:
       - 27017:27017
     volumes:
       - mongodb_data:/data/db
+
+  mongclient:
+      image: mongo-express
+      environment:
+        - ME_CONFIG_MONGODB_SERVER=mongodb
+        - ME_CONFIG_MONGODB_URL=mongodb://mongodb:27017/tweet
+      ports: 
+        - 8081:8081
+
 volumes:
    mongodb_data:
     driver: local
