--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/infra/www/main.ts",
-    "test": "ts-node ./node_modules/jasmine/bin/jasmine",
+    "start": "DATASOURCE=mongoDB ts-node ./src/infra/www/main.ts",
+    "test": "DATASOURCE=inMemory ts-node ./node_modules/jasmine/bin/jasmine",
     "setup:db": "docker-compose up --build -V",
     "start:db": "docker-compose up"
   },
@@ -18,7 +18,9 @@
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "express": "^4.18.1",
+    "mongodb": "^4.9.0",
     "supertest": "^6.2.4",
+    "typeorm": "^0.3.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
