--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "DATASOURCE=mongoDB ts-node ./src/infra/www/main.ts",
     "test": "DATASOURCE=inMemory ts-node ./node_modules/jasmine/bin/jasmine",
-    "setup:db": "docker-compose up --build -V",
     "start:db": "docker-compose up"
   },
   "keywords": [],
@@ -20,12 +19,12 @@
     "express": "^4.18.1",
     "mongodb": "^4.9.0",
     "supertest": "^6.2.4",
-    "typeorm": "^0.3.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jasmine": "^4.0.3",
     "jasmine": "^4.3.0",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
