--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "DATASOURCE=mongoDB ts-node ./src/infra/www/main.ts",
-    "test": "DATASOURCE=inMemory ts-node ./node_modules/jasmine/bin/jasmine",
+    "start": "ts-node ./src/infra/www/main.ts",
+    "test": "NODE_ENV=test ts-node ./node_modules/jasmine/bin/jasmine",
     "start:db": "docker-compose up"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.6",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "amqplib": "^0.10.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.0",
     "supertest": "^6.2.4",
