--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,10 @@ services:
       - 27017:27017
     volumes:
       - mongodb_data:/data/db
-
+  rabbitmq:
+    image: rabbitmq
+    ports:
+      - '5672:5672'
 volumes:
    mongodb_data:
     driver: local
