--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.6",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "amqplib": "^0.10.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.0",
     "supertest": "^6.2.4",
     "uuid": "^8.3.2"
